<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2008 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">My Theme</string>

    <!-- Permission short label -->
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <!-- Permission short label -->
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>
        
    <string name="activity_not_found">Application is not installed on your phone.</string>
        
    <string name="chooser_wallpaper">Select wallpaper from</string>
        
    <string name="theme_app_name">Theme</string>
    <string name="theme_choose_theme">Change themes</string>
    <string name="theme_change_local">Change theme components</string>
    <string name="theme_wallpaper">Home screen wallpaper</string>
    <string name="theme_app_icon">Application icons</string>
    <string name="theme_lock_wallpaper">LockScreen wallpaper</string>
    <string name="theme_lockscreen">Lockscreen</string>
    <string name="theme_wallpaper_more">Get more wallpaper</string>
    <string name="theme_icon_more">Get more icons</string>
    
    <string name="theme_name_default">Default</string>
    <string name="theme_author_default">Default</string>
    <string name="theme_description_default">1</string>
    <string name="theme_version_default">1</string>
    <string name="theme_support_version_default">15</string>
    
    <string name="theme_apply">Apply</string>
    <string name="theme_applying">Applying, please wait...</string>
    <string name="apply_theme_failed">Apply fail, you should update to the latest version.</string>
    <string name="theme_apply_time_out">Apply timeout</string>
    <string name="theme_online">More...</string>
    
</resources>