<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res/com.fruit.thememanager"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:layout_gravity="center" android:orientation="vertical"
	android:background="@drawable/theme_bg">

	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="45dip" android:gravity="center">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
			android:text="@string/theme_change_local" android:textSize="18.0dip"
			android:textColor="@android:color/white" />
	</RelativeLayout>

	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:padding="10dip" android:layout_marginTop="10dip">

		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="vertical">
			<com.fruit.thememanager.ListItemThemeElement
				android:id="@+id/theme_wallpaper" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@drawable/theme_list_item"
				custom:themeIcon="@drawable/ic_theme_wallpaper" custom:themeTitle="@string/theme_wallpaper"
				custom:themeValue="@string/theme_name_default" />
			<View android:layout_width="fill_parent" android:layout_height="1.0dip"
				android:background="@drawable/theme_list_item_divider" />
			
			<com.fruit.thememanager.ListItemThemeElement
				android:id="@+id/theme_application_icon" android:background="@drawable/theme_list_item"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				custom:themeIcon="@drawable/ic_theme_app_icon" custom:themeTitle="@string/theme_app_icon"
				custom:themeValue="@string/theme_name_default" />
			<View android:layout_width="fill_parent" android:layout_height="1.0dip"
				android:background="@drawable/theme_list_item_divider" />
		</LinearLayout>
		
		<LinearLayout android:id="@+id/element_theme_lock"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:orientation="vertical">
			<com.fruit.thememanager.ListItemThemeElement
				android:id="@+id/theme_lock_wallpaper" android:background="@drawable/theme_list_item"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				custom:themeIcon="@drawable/ic_theme_lock_wallpaper"
				custom:themeTitle="@string/theme_lock_wallpaper" custom:themeValue="@string/theme_name_default" />
			<View android:layout_width="fill_parent" android:layout_height="1.0dip"
				android:background="@drawable/theme_list_item_divider" />
			
			<com.fruit.thememanager.ListItemThemeElement
				android:id="@+id/theme_lockscreen" android:background="@drawable/theme_list_item"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				custom:themeIcon="@drawable/ic_theme_lock" custom:themeTitle="@string/theme_lockscreen"
				custom:themeValue="@string/theme_name_default" />
			<View android:layout_width="fill_parent" android:layout_height="1.0dip"
				android:background="@drawable/theme_list_item_divider" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>
