<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/theme_bg" android:orientation="vertical">

	<TextView android:id="@+id/label"
	    android:layout_width="fill_parent"
		android:layout_height="45dip" 
		android:gravity="center" android:text="@string/theme_app_name"
		android:textSize="18.0sp" android:textColor="@android:color/white" />

	<GridView android:id="@+id/theme_install"
		android:layout_width="fill_parent" 
		android:layout_height="0dip"
		android:paddingTop="@dimen/theme_padding_top" 
		android:paddingLeft="6dip"
		android:paddingRight="6dip" 
		android:horizontalSpacing="5dip"
		android:verticalSpacing="8.0dip" 
		android:stretchMode="columnWidth"
		android:numColumns="3" android:layout_weight="1.0"
		android:layout_gravity="center_horizontal" 
		android:gravity="center" 
		/>

    <FrameLayout android:layout_width="fill_parent"
        android:layout_height="50dip" android:background="@drawable/theme_buttom_bar_bg">
		
		<TextView android:id="@+id/theme_custom_current_theme"
			android:layout_gravity="left" 
			android:layout_width="wrap_content"
			android:layout_height="40.0dip" 
			android:paddingLeft="10.0dip"
			android:paddingRight="10.0dip" 
			android:textSize="16.0dip"
			android:textColor="@android:color/black" 
			android:gravity="center"
			android:background="@drawable/theme_button" 
			android:clickable="true" 
			android:text="@string/theme_change_local"
			android:layout_marginLeft="20dip"
            android:layout_marginRight="10dip"
			/>
		
		<TextView android:id="@+id/theme_online"
            android:layout_gravity="right" 
            android:layout_width="wrap_content"
            android:layout_height="40.0dip" 
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip" 
            android:textSize="16.0dip"
            android:textColor="@android:color/black" 
            android:gravity="center"
            android:background="@drawable/theme_button" 
            android:clickable="true" 
            android:text="@string/theme_online" 
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
        />

		</FrameLayout>

</LinearLayout>